# cursor-explorer

./: .coverage  .coverage 2  .cursorrules  .cursorrules-skill-mcp  .env.example  .gitignore  AGENT_AGNOSTIC_PLAN.md  AI_SKILL_USAGE_GUIDE.md  DOTFILES_SYNC_PLAN.md  GITHUB_REVIEW.md  GIT_HISTORY_CLEANUP.md  Justfile  MOTIVATION_ANALYSIS.md  NAMING_RECOMMENDATIONS.md  README.md  REPO_CLEANUP_PLAN.md  REPO_RENAME_PLAN.md  SECURITY_REVIEW.md  SKILL_MCP_MOTIVATION.md  SKILL_MCP_USAGE_RULES.md  TODO.md  TOOL_USAGE_MOTIVATION.md  URGENT_DOTFILES_FIX.md  VALIDATION_REPORT.md  pyproject.toml  pytest.ini
docs/: CHAT_EXPLORER.md
prompts/: annotation.json.tmpl
scripts/: .env.example  agent_qa_sweep.sh  agent_query_fuzzer.sh  build_index_and_vecdb.sh  lib.sh
seeds/: queries.txt
src/: llm_cache.py  llm_helpers.py  llm_utils.py
src/agent_explorer/: __init__.py
src/cursor_explorer/: __init__.py  adversary.py  annotate.py  cli.py  cluster.py  db.py  embeddings.py  env.py  formatting.py  fuzz.py  index.py  memory.py  multiscale.py  parser.py  paths.py  qa.py  rag.py  streams.py  tag_cluster.py  trace.py  (+2 more)
tests/: conftest.py  test_cli.py  test_cli_more.py  test_cluster_cli.py  test_cluster_flow_optional_llm.py  test_db_and_paths.py  test_docs_index.py  test_formatting_and_trace.py  test_fuzz.py  test_hybrid_and_vec_errors.py  test_index_and_toolchat_tools.py  test_pairs.py  test_parser_and_rag.py  test_parser_edge_cases.py  test_pipeline.py  test_qa.py  test_qa_cli.py  test_small_utils.py  test_toolchat.py  test_topics_and_agent.py  test_trace.py  test_vector_and_embeddings.py
(+16 files in other folders)
